--- a/Summer_School_Movies/Summer_School_Movies/Properties/launchSettings.json
+++ b/Summer_School_Movies/Summer_School_Movies/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "Summer_School_Movies": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/Summer_School_Movies",
+      "launchUrl": "api/Movies",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
