--- a/Summer_School_Movies/MoviesAPIConsumer/MoviesAPIConsumer.csproj
+++ b/Summer_School_Movies/MoviesAPIConsumer/MoviesAPIConsumer.csproj
@@ -6,5 +6,61 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\lib\" />
+    <Folder Include="wwwroot\css\" />
+    <Folder Include="wwwroot\lib\twitter-bootstrap\" />
+    <Folder Include="Views\" />
+    <Folder Include="Views\Shared\" />
+    <Folder Include="Controllers\" />
+    <Folder Include="Views\Home\" />
+    <Folder Include="Views\Shared\EditorTemplates\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Remove="wwwroot\lib\twitter-bootstrap\css\bootstrap.css" />
+    <Content Remove="wwwroot\lib\twitter-bootstrap\css\bootstrap.css.map" />
+    <Content Remove="wwwroot\lib\twitter-bootstrap\css\bootstrap.min.css" />
+    <Content Remove="wwwroot\lib\twitter-bootstrap\css\bootstrap.min.css.map" />
+    <Content Remove="wwwroot\lib\twitter-bootstrap\css\bootstrap-grid.css" />
+    <Content Remove="wwwroot\lib\twitter-bootstrap\css\bootstrap-grid.css.map" />
+    <Content Remove="wwwroot\lib\twitter-bootstrap\css\bootstrap-grid.min.css" />
+    <Content Remove="wwwroot\lib\twitter-bootstrap\css\bootstrap-grid.min.css.map" />
+    <Content Remove="wwwroot\lib\twitter-bootstrap\css\bootstrap-reboot.css" />
+    <Content Remove="wwwroot\lib\twitter-bootstrap\css\bootstrap-reboot.css.map" />
+    <Content Remove="wwwroot\lib\twitter-bootstrap\css\bootstrap-reboot.min.css" />
+    <Content Remove="wwwroot\lib\twitter-bootstrap\css\bootstrap-reboot.min.css.map" />
+    <Content Remove="wwwroot\lib\twitter-bootstrap\js\bootstrap.bundle.js" />
+    <Content Remove="wwwroot\lib\twitter-bootstrap\js\bootstrap.bundle.js.map" />
+    <Content Remove="wwwroot\lib\twitter-bootstrap\js\bootstrap.bundle.min.js" />
+    <Content Remove="wwwroot\lib\twitter-bootstrap\js\bootstrap.bundle.min.js.map" />
+    <Content Remove="wwwroot\lib\twitter-bootstrap\js\bootstrap.js" />
+    <Content Remove="wwwroot\lib\twitter-bootstrap\js\bootstrap.js.map" />
+    <Content Remove="wwwroot\lib\twitter-bootstrap\js\bootstrap.min.js" />
+    <Content Remove="wwwroot\lib\twitter-bootstrap\js\bootstrap.min.js.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="wwwroot\lib\twitter-bootstrap\css\bootstrap.css" />
+    <None Include="wwwroot\lib\twitter-bootstrap\css\bootstrap.css.map" />
+    <None Include="wwwroot\lib\twitter-bootstrap\css\bootstrap.min.css" />
+    <None Include="wwwroot\lib\twitter-bootstrap\css\bootstrap.min.css.map" />
+    <None Include="wwwroot\lib\twitter-bootstrap\css\bootstrap-grid.css" />
+    <None Include="wwwroot\lib\twitter-bootstrap\css\bootstrap-grid.css.map" />
+    <None Include="wwwroot\lib\twitter-bootstrap\css\bootstrap-grid.min.css" />
+    <None Include="wwwroot\lib\twitter-bootstrap\css\bootstrap-grid.min.css.map" />
+    <None Include="wwwroot\lib\twitter-bootstrap\css\bootstrap-reboot.css" />
+    <None Include="wwwroot\lib\twitter-bootstrap\css\bootstrap-reboot.css.map" />
+    <None Include="wwwroot\lib\twitter-bootstrap\css\bootstrap-reboot.min.css" />
+    <None Include="wwwroot\lib\twitter-bootstrap\css\bootstrap-reboot.min.css.map" />
+    <None Include="wwwroot\lib\twitter-bootstrap\js\bootstrap.bundle.js" />
+    <None Include="wwwroot\lib\twitter-bootstrap\js\bootstrap.bundle.js.map" />
+    <None Include="wwwroot\lib\twitter-bootstrap\js\bootstrap.bundle.min.js" />
+    <None Include="wwwroot\lib\twitter-bootstrap\js\bootstrap.bundle.min.js.map" />
+    <None Include="wwwroot\lib\twitter-bootstrap\js\bootstrap.js" />
+    <None Include="wwwroot\lib\twitter-bootstrap\js\bootstrap.js.map" />
+    <None Include="wwwroot\lib\twitter-bootstrap\js\bootstrap.min.js" />
+    <None Include="wwwroot\lib\twitter-bootstrap\js\bootstrap.min.js.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 </Project>
